--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,30 @@
 {
   "manifest_version": 3,
   "name": "InterviewBit Question Viewer",
-  "version": "1.0",
-  "description": "Display random interview questions from InterviewBit",
+  "version": "1.0.0",
+  "description": "Display random interview questions from InterviewBit on your new tab page",
   "permissions": ["activeTab"],
   "host_permissions": ["https://*.interviewbit.com/*"],
   "chrome_url_overrides": {
     "newtab": "index.html"
+  },
+  "icons": {
+    "16": "icon16.png",
+    "48": "icon48.png",
+    "128": "icon128.png"
+  },
+  "action": {
+    "default_icon": {
+      "16": "icon16.png",
+      "48": "icon48.png",
+      "128": "icon128.png"
+    },
+    "default_title": "InterviewBit Question Viewer"
+  },
+  "content_security_policy": {
+    "extension_pages": "script-src 'self'; object-src 'self'"
+  },
+  "background": {
+    "service_worker": "background.js"
   }
 }
